tests/ui/fips_keygen_secret_share_no_clone.stderr
error[E0599]: no method named `clone` found for struct `FipsModuleSecretShare65` in the current scope
  --> tests/ui/fips_keygen_secret_share_no_clone.rs:13:25
   |
13 |     let _copied = local.clone();
   |                         ^^^^^ method not found in `FipsModuleSecretShare65`
